refactor: sync metadata and status code when authorize